# app-reps

./: DEVELOPER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: fetch.yml
data/boundaries/: congressional_districts.geojson  us-states.geojson
data/people/: roles.json
docs/: index.html  manifest.json  script.js  service-worker.js  status.json  status.yaml
docs/components/ci-rep/: ci-rep.css  ci-rep.js
docs/styles/: app.css  base.css  cards.css  responsive.css  themes.css  tokens.css
src/app_reps/cli/: __main__.py  bump_version.py  cli.py  cli_fetch_boundaries.py  cli_fetch_cd.py  cli_fetch_roles.py  cli_fetch_states.py  prep_code.py  release.py  serve_app.py
src/setup/: fetch_boundaries.py  fetch_cd.py  fetch_roles.py  fetch_states.py  init_venv.py  write_status_yaml.py
tests/: test_cli_bump_version.py  test_cli_cli.py  test_cli_prep_code.py  test_cli_release.py  test_cli_serve_app.py
